--- a/src/component/styles/Navbar.module.css
+++ b/src/component/styles/Navbar.module.css
@@ -86,3 +86,55 @@
     font-weight: bold;
     margin-bottom: 3px;
   }
+.navbar_notification {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.notification_icon {
+  font-size: 20px;
+  color: #888;
+}
+
+.notification_count {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background-color: red;
+  color: #fff;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.4;
+}
+
+.notification_dropdown {
+  position: absolute;
+  top: 30px;
+  right: -10px;
+  background-color: #fff;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  z-index: 1;
+  min-width: 200px;
+}
+
+.notification_item {
+  padding: 10px;
+  font-size: 14px;
+  color: #333;
+  border-bottom: 1px solid #eee;
+}
+
+.notification_item:last-child {
+  border-bottom: none;
+}
+
+.notification_status {
+  font-weight: bold;
+  margin-bottom: 5px;
+  text-align: center;
+}
