--- a/src/component/styles/All.module.css
+++ b/src/component/styles/All.module.css
@@ -2,3 +2,30 @@
     display:flex;
     flex-direction:column;
 }
+
+.popup_container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .popup_content {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+  }
+  
+  .popup_content h3,
+  .popup_content p {
+    margin: 0;
+  }
+  
+  .popup_content button {
+    margin-top: 10px;
+  }
