--- a/src/component/styles/Absence.module.css
+++ b/src/component/styles/Absence.module.css
@@ -1,6 +1,6 @@
 .container{
     display: block;
-}
-.list_leave{
-    margin-top: 60px;
+    width: 80%;
+    margin-left: auto;
+    margin-right: 0;
 }
