--- a/src/component/styles/Profile.module.css
+++ b/src/component/styles/Profile.module.css
@@ -30,7 +30,7 @@
 .profile_info {
     flex: 1;
 }
-.profile_name {
+/* .profile_name {
     display: flex;
     align-items: center;
     font-size: 20px;
@@ -54,4 +54,4 @@ font-size: 20px;
     font-weight: bold;
     border: none;
     border-bottom: 2px solid #ccc;
-}
+} */
