--- a/src/component/styles/All.module.css
+++ b/src/component/styles/All.module.css
@@ -13,6 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 999999999999;
   }
   
   .popup_content {
